// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal renders correctly 1`] = `
<div
  className="sc-AxirZ jVeuba"
>
  <div
    className="sc-AxjAm sc-AxiKw hMRtmQ"
  >
    <h2
      className="sc-AxhCb ia-DMNp"
    >
      title
    </h2>
    <div
      className="sc-AxhUy POmIQ"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`Modal renders correctly 2`] = `
<div
  className="sc-AxirZ gPoqrd"
>
  <div
    className="sc-AxjAm sc-AxiKw hMRtmQ"
  >
    <h2
      className="sc-AxhCb ia-DMNp"
    >
      title
    </h2>
    <div
      className="sc-AxhUy POmIQ"
    >
      <div />
    </div>
  </div>
</div>
`;
